--- a/vueboard/styles/app.css
+++ b/vueboard/styles/app.css
@@ -1,420 +1,433 @@
-
-  
-  .modal-open {
-	overflow: auto; }
-  
-  .setup-background {
-	background-position: center center;
-	background-size: cover;
-	background-repeat: no-repeat; }
-  
-  .contain-background {
-	background-position: center center;
-	background-size: contain;
-	background-repeat: no-repeat; }
-  
-
-  
-  /* FireFox */
-  @-moz-document url-prefix() {}.sprite {
-	display: inline-block;
-	overflow: hidden;
-	background-repeat: no-repeat;
-	background-image: url("../images/terrain_spritesheet.png"); }
-  
-  .dirt01 {
-	width: 64px;
-	height: 64px;
-	background-position: -0px -0px; }
-  
-  .dirt02 {
-	width: 64px;
-	height: 64px;
-	background-position: -64px -0px; }
-  
-  .grass01 {
-	width: 64px;
-	height: 64px;
-	background-position: -128px -0px; }
-  
-  .grass02 {
-	width: 64px;
-	height: 64px;
-	background-position: -192px -0px; }
-  
-  .stone01 {
-	width: 64px;
-	height: 64px;
-	background-position: -256px -0px; }
-  
-  .stone02 {
-	width: 64px;
-	height: 64px;
-	background-position: -320px -0px; }
-  
-  .stone03 {
-	width: 64px;
-	height: 64px;
-	background-position: -384px -0px; }
-  
-  .stone04 {
-	width: 64px;
-	height: 64px;
-	background-position: -448px -0px; }
-  
-  .wall01 {
-	width: 64px;
-	height: 64px;
-	background-position: -512px -0px; }
-  
-  .wall02 {
-	width: 64px;
-	height: 64px;
-	background-position: -576px -0px; }
-  
-  .wall03 {
-	width: 64px;
-	height: 64px;
-	background-position: -640px -0px; }
-  
-  .rock01 {
-	width: 64px;
-	height: 64px;
-	background-position: -704px -0px; }
-  
-  .rock02 {
-	width: 64px;
-	height: 64px;
-	background-position: -768px -0px; }
-  
-  /* FONTS */
-  h1, h2, h3, h4, h5, h6 {
-	color: black;
-	font-family: "Lato", sans-serif;
-	font-weight: normal;
-	margin-bottom: 20px;
-	margin-top: 0px; }
-  
-  h1 {
-	font-size: 7rem;
-	line-height: 1.1;
-	color: white; }
-	@media (max-width: 767px) {
-	  h1 {
-		font-size: 6rem; } }
-  
-  h2 {
-	font-size: 5.5rem;
-	line-height: 1.25;
-	color: #284c72; }
-	@media (max-width: 767px) {
-	  h2 {
-		font-size: 5rem; } }
-  
-  h3 {
-	font-size: 4rem;
-	line-height: 1.5;
-	color: #2a515f; }
-  
-  h4 {
-	font-size: 3rem;
-	line-height: 1.7;
-	color: #6b613d; }
-  
-  h5 {
-	font-size: 2.4rem;
-	line-height: 1.8;
-	color: #2a515f;
-	font-style: italic; }
-  
-  h6 {
-	font-size: 1.5rem;
-	line-height: 2.3;
-	font-family: "Lato", sans-serif; }
-  
-  html {
-	font-size: 10px;
-	line-height: 1.5; }
-  
-  .default-font-style, body, body p {
-	font-weight: normal;
-	font-size: 2rem;
-	line-height: 1.6;
-	color: black;
-	font-family: "Lato", sans-serif;
-	margin-bottom: 20px; }
-  
-  body a {
-	color: #8c0007;
-	text-decoration: underline; }
-	body a:visited {
-	  color: #6b613d; }
-	body a:focus, body a:active {
-	  color: #8c0007; }
-	body a:hover {
-	  color: #8c0007;
-	  text-decoration: none; }
-  
-  ::-webkit-input-placeholder {
-	color: #aaa;
-	font-size: 1.8rem;
-	opacity: 1; }
-  
-  :-moz-placeholder {
-	color: #aaa;
-	font-size: 1.8rem;
-	opacity: 1; }
-  
-  ::-moz-placeholder {
-	color: #aaa;
-	font-size: 1.8rem;
-	opacity: 1; }
-  
-  :-ms-input-placeholder {
-	color: #aaa;
-	font-size: 1.8rem;
-	opacity: 1; }
-
-  */
-  /**
-   * Site Specific. Will be very different between projects
-   */
-  /* SITE WIDE */
-  html, body {
-	width: 100%;
-	height: 100%;
-	display: block;
-	margin: 0; }
-  
-  html {
-	position: relative;
-	/* font-size: $root-font-size; */ }
-  
-  body {
-	background-color: white;
-	overflow-y: scroll;
-	overflow-x: hidden;
-	position: relative; }
-  
-  ::-moz-selection {
-	/* Code for Firefox */
-	color: white;
-	background: #8c0007;
-	background: rgba(140, 0, 7, 0.9); }
-  
-  ::selection {
-	color: white;
-	background: #8c0007;
-	background: rgba(140, 0, 7, 0.9); }
-  
-  img {
-	max-width: 100%;
-	height: auto; }
-  
-  div.lazy,
-  img.lazy {
-	opacity: 1;
-	transition: opacity 0.3s; }
-  
-  div.lazy[data-src],
-  img.lazy[data-src] {
-	opacity: 0; }
-  
-  a:focus,
-  button:focus,
-  input:focus {
-	outline: 0 !important; }
-  
-  hr {
-	border-color: #ddd;
-	margin: 40px 0px; }
-
-  
-  /**
-   * Bootstrap overrides
-   */
-  .modal .modal-dialog {
-	margin: 100px auto 0; }
-
-  /**
-   * SINGLE PARTY PAGE
-   */
-
-   #party-page {  }
-			#party-page #party-gamearea {  }
-			#party-page #party-gamearea #gamearea-map { margin: 0 auto; }
+/* FireFox */
+@-moz-document url-prefix() {
+}
+.sprite {
+     display: inline-block;
+     overflow: hidden;
+     background-repeat: no-repeat;
+     background-image: url("../images/terrain_spritesheet.png");
+}
+ .dirt01 {
+     width: 64px;
+     height: 64px;
+     background-position: -0px -0px;
+}
+ .dirt02 {
+     width: 64px;
+     height: 64px;
+     background-position: -64px -0px;
+}
+ .grass01 {
+     width: 64px;
+     height: 64px;
+     background-position: -128px -0px;
+}
+ .grass02 {
+     width: 64px;
+     height: 64px;
+     background-position: -192px -0px;
+}
+ .stone01 {
+     width: 64px;
+     height: 64px;
+     background-position: -256px -0px;
+}
+ .stone02 {
+     width: 64px;
+     height: 64px;
+     background-position: -320px -0px;
+}
+ .stone03 {
+     width: 64px;
+     height: 64px;
+     background-position: -384px -0px;
+}
+ .stone04 {
+     width: 64px;
+     height: 64px;
+     background-position: -448px -0px;
+}
+ .wall01 {
+     width: 64px;
+     height: 64px;
+     background-position: -512px -0px;
+}
+ .wall02 {
+     width: 64px;
+     height: 64px;
+     background-position: -576px -0px;
+}
+ .wall03 {
+     width: 64px;
+     height: 64px;
+     background-position: -640px -0px;
+}
+ .rock01 {
+     width: 64px;
+     height: 64px;
+     background-position: -704px -0px;
+}
+ .rock02 {
+     width: 64px;
+     height: 64px;
+     background-position: -768px -0px;
+}
+/* FONTS */
+ h1, h2, h3, h4, h5, h6 {
+     color: black;
+     font-family: "Lato", sans-serif;
+     font-weight: normal;
+     margin-bottom: 20px;
+     margin-top: 0px;
+}
+ h1 {
+     font-size: 7rem;
+     line-height: 1.1;
+     color: white;
+}
+ @media (max-width: 767px) {
+     h1 {
+         font-size: 6rem;
+    }
+}
+ h2 {
+     font-size: 5.5rem;
+     line-height: 1.25;
+     color: #284c72;
+}
+ @media (max-width: 767px) {
+     h2 {
+         font-size: 5rem;
+    }
+}
+ h3 {
+     font-size: 4rem;
+     line-height: 1.5;
+     color: #2a515f;
+}
+ h4 {
+     font-size: 3rem;
+     line-height: 1.7;
+     color: #6b613d;
+}
+ h5 {
+     font-size: 2.4rem;
+     line-height: 1.8;
+     color: #2a515f;
+     font-style: italic;
+}
+ h6 {
+     font-size: 1.5rem;
+     line-height: 2.3;
+     font-family: "Lato", sans-serif;
+}
+ html {
+     font-size: 10px;
+     line-height: 1.5;
+}
+ .default-font-style, body, body p {
+     font-weight: normal;
+     font-size: 2rem;
+     line-height: 1.6;
+     color: black;
+     font-family: "Lato", sans-serif;
+     margin-bottom: 20px;
+}
+ body a {
+     color: #8c0007;
+     text-decoration: underline;
+}
+ body a:visited {
+     color: #6b613d;
+}
+ body a:focus, body a:active {
+     color: #8c0007;
+}
+ body a:hover {
+     color: #8c0007;
+     text-decoration: none;
+}
+ ::-webkit-input-placeholder {
+     color: #aaa;
+     font-size: 1.8rem;
+     opacity: 1;
+}
+ :-moz-placeholder {
+     color: #aaa;
+     font-size: 1.8rem;
+     opacity: 1;
+}
+ ::-moz-placeholder {
+     color: #aaa;
+     font-size: 1.8rem;
+     opacity: 1;
+}
+ :-ms-input-placeholder {
+     color: #aaa;
+     font-size: 1.8rem;
+     opacity: 1;
+}
+/** * Site Specific. Will be very different between projects */
+/* SITE WIDE */
+ html, body {
+     width: 100%;
+     height: 100%;
+     display: block;
+     margin: 0;
+}
+ html {
+     position: relative;
+    /* font-size: $root-font-size;
+     */
+}
+ body {
+     background-color: white;
+     overflow-y: scroll;
+     overflow-x: hidden;
+     position: relative;
+}
+ ::-moz-selection {
+    /* Code for Firefox */
+     color: white;
+     background: #8c0007;
+     background: rgba(140, 0, 7, 0.9);
+}
+ ::selection {
+     color: white;
+     background: #8c0007;
+     background: rgba(140, 0, 7, 0.9);
+}
+ img {
+     max-width: 100%;
+     height: auto;
+}
+ div.lazy, img.lazy {
+     opacity: 1;
+     transition: opacity 0.3s;
+}
+ div.lazy[data-src], img.lazy[data-src] {
+     opacity: 0;
+}
+ a:focus, button:focus, input:focus {
+     outline: 0 !important;
+}
+ hr {
+     border-color: #ddd;
+     margin: 40px 0px;
+}
+/** * Bootstrap overrides */
+ .modal .modal-dialog {
+     margin: 100px auto 0;
+}
+ .modal-open {
+     overflow: auto;
+}
+ .setup-background {
+     background-position: center center;
+     background-size: cover;
+     background-repeat: no-repeat;
+}
+ .contain-background {
+     background-position: center center;
+     background-size: contain;
+     background-repeat: no-repeat;
+}
+/** * SINGLE PARTY PAGE */
+ #party-page {
+     height: auto;
+     display: block;
+}
+ #party-page #party-gamearea {
+     position: relative;
+     max-width: none;
+     width: 100%;
+     overflow: hidden;
+    /*flex: 1;
+    */
+}
+ #party-page #party-gamearea.paint-tool {
+     cursor: url(../images/paint-roller-solid.png), default;
+}
+ #party-page #party-gamearea.fill-tool {
+     cursor: url(../images/fill-drip-solid.png), default;
+}
+ #party-page #party-gamearea.erase-tool {
+     cursor: url(../images/eraser-solid.png), default;
+}
+ #party-page #party-gamearea.highlight-tool {
+     cursor: url(../images/highlighter-solid.png), default;
+}
+ #party-page #party-gamearea.sample-tool {
+     cursor: url(../images/eye-dropper-solid.png), default;
+}
+ #party-page #party-gamearea #gamearea-map-wrapper {
+     background-color: #e5e5e0;
+     height: 100%;
+     max-height: 100%;
+     width: 100%;
+     overflow: auto;
+}
+ #party-page #party-gamearea #gamearea-map {
+     height: 1160px;
+     width: 1160px;
+     padding: 100px;
+     display: flex;
+     flex-wrap: wrap;
+     overflow: hidden;
+     margin: 0 auto;
+}
+ #party-page #party-gamearea .tile {
+     border: 1px solid #e5e5e0;
+     border-top: 0;
+     border-right: 0;
+     background-color: #FFFFFF;
+     height: 32px;
+     width: 32px;
+     position: relative;
+}
+ #party-page #party-gamearea .tile:before {
+     content: '';
+     display: block;
+     width: 32px;
+     height: 32px;
+     margin: -1px;
+}
+ #party-page #party-gamearea .tile.highlight:before {
+     background-color: rgba(255, 0, 0, 0.3);
+     background-size: 100% 100%;
+     -webkit-animation: AnimationName 1s ease infinite;
+     -moz-animation: AnimationName 1s ease infinite;
+     animation: AnimationName 1s ease infinite;
+}
+ @-webkit-keyframes AnimationName {
+     0% {
+         background-position: 0% 50%;
+         opacity: 0.5;
+    }
+     50% {
+         background-position: 100% 50%;
+         opacity: 1;
+    }
+     100% {
+         background-position: 0% 50%;
+         opacity: 0.5;
+    }
+}
+ @-moz-keyframes AnimationName {
+     0% {
+         background-position: 0% 50%;
+         opacity: 0.5;
+    }
+     50% {
+         background-position: 100% 50%;
+         opacity: 1;
+    }
+     100% {
+         background-position: 0% 50%;
+         opacity: 0.5;
+    }
+}
+ @keyframes AnimationName {
+     0% {
+         background-position: 0% 50%;
+         opacity: 0.5;
+    }
+     50% {
+         background-position: 100% 50%;
+         opacity: 1;
+    }
+     100% {
+         background-position: 0% 50%;
+         opacity: 0.5;
+    }
+}
+ #party-page #party-gamearea .tile.path:before {
+     background-color: rgba(255, 0, 0, 0.5);
+}
+ #party-page #party-gamearea .npc {
+     position: absolute;
+     top: 50%;
+     left: 50%;
+     -ms-transform: translate(-50%, -50%);
+     -webkit-transform: translate(-50%, -50%);
+     transform: translate(-50%, -50%);
+     background-color: #98c4f3;
+     border: 2px dotted #231f20;
+     border-radius: 50%;
+     cursor: grab;
+     width: 28px;
+     height: 28px;
+}
+ #party-page #party-gamearea .npc.movement {
+     display: block;
+     content: '';
+}
+ #party-page #dm-tools {
+     position: absolute;
+     top: 0;
+     left: 0;
+     overflow-y: hidden;
+     z-index: 10;
+}
+ #party-page #dm-tools .dm-tool {
+     padding: 15px;
+}
+ #party-page #dm-tools .dm-tool .dm-holder {
+     display: flex;
+}
+ #party-page #dm-tools #tool-select .tool, #party-page #dm-tools #tool-select .visual-tool {
+     cursor: pointer;
+     width: 32px;
+     height: 32px;
+     text-align: center;
+     padding: 0.7rem;
+     position: relative;
+}
+ #party-page #dm-tools #tool-select .tool.active, #party-page #dm-tools #tool-select .tool:hover, #party-page #dm-tools #tool-select .visual-tool.active, #party-page #dm-tools #tool-select .visual-tool:hover {
+     background-color: #98c4f3;
+}
+ #party-page #dm-tools #tool-select .tool i, #party-page #dm-tools #tool-select .visual-tool i {
+     display: block;
+     font-size: 1.6rem;
+}
+ #party-page #dm-tools #tool-select .tool input[type=color], #party-page #dm-tools #tool-select .visual-tool input[type=color] {
+     background-color: transparent;
+     border: 0;
+     cursor: pointer;
+     position: absolute;
+     top: 1px;
+     left: 1px;
+     font-size: 1.6rem;
+     padding: 6px;
+     height: 30px;
+     width: 30px;
+}
+ #party-page #dm-tools #tool-select .tool-spacer {
+     height: 32px;
+     width: 10px;
+}
+ #party-page #dm-tools #current-tile {
+     width: 32px;
+     height: 32px;
+     display: inline-block;
+}
+ #party-page #texture-modal .dm-holder {
+     display: flex;
+     margin: 15px 0;
+     flex-wrap: wrap;
+}
+ #party-page #texture-modal .dm-holder .dm-tile {
+     cursor: pointer;
+     width: 32px;
+     height: 32px;
+     margin: 5px 5px 5px 0;
+}
+ #party-page #texture-modal .dm-holder .dm-tile img, #party-page #texture-modal .dm-holder .dm-tile input {
+     max-width: 100%;
+     height: 32px;
+     width: 32px;
+}
+ #party-page #texture-modal .dm-holder .dm-tile.active {
+     box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.8);
+}
  
-  #party-page { height: auto; display: block; }
-	
-	#party-page #party-gamearea { 
-	  position: relative;
-	  max-width: none; 
-	  width: 100%;
-	  overflow: hidden;
-	  /*flex: 1;*/ }
-	  #party-page #party-gamearea.paint-tool {
-		cursor: url(../images/paint-roller-solid.png), default; }
-	  #party-page #party-gamearea.fill-tool {
-		cursor: url(../images/fill-drip-solid.png), default; }
-	  #party-page #party-gamearea.erase-tool {
-		cursor: url(../images/eraser-solid.png), default; }
-	  #party-page #party-gamearea.highlight-tool {
-		cursor: url(../images/highlighter-solid.png), default; }
-	  #party-page #party-gamearea.sample-tool {
-		cursor: url(../images/eye-dropper-solid.png), default; }
-	  #party-page #party-gamearea #gamearea-map-wrapper {
-		background-color: #e5e5e0;
-		height: 100%;
-		max-height: 100%;
-		width: 100%;
-		overflow: auto; }
-	  #party-page #party-gamearea #gamearea-map {
-		height: 1160px;
-		width: 1160px;
-		padding: 100px;
-		display: flex;
-		flex-wrap: wrap;
-		overflow: hidden; }
-	  #party-page #party-gamearea .tile {
-		border: 1px solid #e5e5e0;
-		border-top: 0;
-		border-right: 0;
-		background-color: #FFFFFF;
-		height: 32px;
-		width: 32px;
-		position: relative; }
-		#party-page #party-gamearea .tile:before {
-		  content: '';
-		  display: block;
-		  width: 32px;
-		  height: 32px;
-		  margin: -1px; }
-		#party-page #party-gamearea .tile.highlight:before {
-		  background-color: rgba(255, 0, 0, 0.3);
-		  background-size: 100% 100%;
-		  -webkit-animation: AnimationName 1s ease infinite;
-		  -moz-animation: AnimationName 1s ease infinite;
-		  animation: AnimationName 1s ease infinite; }
-  
-  @-webkit-keyframes AnimationName {
-	0% {
-	  background-position: 0% 50%;
-	  opacity: 0.5; }
-	50% {
-	  background-position: 100% 50%;
-	  opacity: 1; }
-	100% {
-	  background-position: 0% 50%;
-	  opacity: 0.5; } }
-  
-  @-moz-keyframes AnimationName {
-	0% {
-	  background-position: 0% 50%;
-	  opacity: 0.5; }
-	50% {
-	  background-position: 100% 50%;
-	  opacity: 1; }
-	100% {
-	  background-position: 0% 50%;
-	  opacity: 0.5; } }
-  
-  @keyframes AnimationName {
-	0% {
-	  background-position: 0% 50%;
-	  opacity: 0.5; }
-	50% {
-	  background-position: 100% 50%;
-	  opacity: 1; }
-	100% {
-	  background-position: 0% 50%;
-	  opacity: 0.5; } }
-		#party-page #party-gamearea .tile.path:before {
-		  background-color: rgba(255, 0, 0, 0.5); }
-	  #party-page #party-gamearea .npc {
-		position: absolute;
-		top: 50%;
-		left: 50%;
-		-ms-transform: translate(-50%, -50%);
-		-webkit-transform: translate(-50%, -50%);
-		transform: translate(-50%, -50%);
-		background-color: #98c4f3;
-		border: 2px dotted #231f20;
-		border-radius: 50%;
-		cursor: grab;
-		width: 28px;
-		height: 28px; }
-		#party-page #party-gamearea .npc.movement {
-		  display: block;
-		  content: ''; }
-	#party-page #dm-tools {
-	  position: absolute;
-	  top: 0;
-	  left: 0;
-	  overflow-y: hidden;
-	  z-index: 10; }
-	  #party-page #dm-tools .dm-tool {
-		padding: 15px; }
-		#party-page #dm-tools .dm-tool .dm-holder {
-		  display: flex; }
-	  #party-page #dm-tools #tool-select .tool,
-	  #party-page #dm-tools #tool-select .visual-tool {
-		cursor: pointer;
-		width: 32px;
-		height: 32px;
-		text-align: center;
-		padding: 0.7rem;
-		position: relative; }
-		#party-page #dm-tools #tool-select .tool.active, #party-page #dm-tools #tool-select .tool:hover,
-		#party-page #dm-tools #tool-select .visual-tool.active,
-		#party-page #dm-tools #tool-select .visual-tool:hover {
-		  background-color: #98c4f3; }
-		#party-page #dm-tools #tool-select .tool i,
-		#party-page #dm-tools #tool-select .visual-tool i {
-		  display: block;
-		  font-size: 1.6rem; }
-		#party-page #dm-tools #tool-select .tool input[type=color],
-		#party-page #dm-tools #tool-select .visual-tool input[type=color] {
-		  background-color: transparent;
-		  border: 0;
-		  cursor: pointer;
-		  position: absolute;
-		  top: 1px;
-		  left: 1px;
-		  font-size: 1.6rem;
-		  padding: 6px;
-		  height: 30px;
-		  width: 30px; }
-	  #party-page #dm-tools #tool-select .tool-spacer {
-		height: 32px;
-		width: 10px; }
-	  #party-page #dm-tools #current-tile {
-		width: 32px;
-		height: 32px;
-		display: inline-block; }
-	#party-page #texture-modal .dm-holder {
-	  display: flex;
-	  margin: 15px 0;
-	  flex-wrap: wrap; }
-	  #party-page #texture-modal .dm-holder .dm-tile {
-		cursor: pointer;
-		width: 32px;
-		height: 32px;
-		margin: 5px 5px 5px 0; }
-		#party-page #texture-modal .dm-holder .dm-tile img,
-		#party-page #texture-modal .dm-holder .dm-tile input {
-		  max-width: 100%;
-		  height: 32px;
-		  width: 32px; }
-		#party-page #texture-modal .dm-holder .dm-tile.active {
-		  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.8); }
-  
-  /**
-   * DEFAULT PAGES
-   */
-  /**
-   * CONTACT PAGE
-   */
-  /**
-   * ARCHIVES
-   */
-  
