--- a/vanilla/styles/app.css
+++ b/vanilla/styles/app.css
@@ -13,6 +13,7 @@
 }
 /* FireFox */
 @-moz-document url-prefix() {
+
 }
 .sprite {
 	display: inline-block;
@@ -270,8 +271,8 @@ hr {
 }
 #party-page #party-gamearea #gamearea-map-wrapper {
 	background-color: #e5e5e0;
-	height: 100%;
-	max-height: 100%;
+	height: 100vh;
+	max-height: 100vh;
 	width: 100%;
 	overflow: auto;
 }
